--- a/fern/pages/docs/introduction/overview.mdx
+++ b/fern/pages/docs/introduction/overview.mdx
@@ -4,7 +4,11 @@ excerpt: A tool for building beautiful developer documentation
 ---
 
 With Fern, you can build beautiful developer documentation that matches your brand. Fern supports both 
-generating API Reference documentation as well as User Guides and tutorials. 
+generating API Reference documentation as well as guides and tutorials.
+
+<Frame>
+   <img alt="Sample docs" src="./hume-docs.png" />
+</Frame>
 
 ## Showcase 
 
@@ -12,32 +16,50 @@ generating API Reference documentation as well as User Guides and tutorials.
   <Card
     title="Hume"
     href="https://dev.hume.ai/intro"
+    icon={
+      <img src="https://www.hume.ai/icons/icon-144x144.png" />
+    }
   />
   <Card
     title="Primer"
     href="https://primer.io/docs/api"
+    icon={
+      <img src="https://assets-global.website-files.com/65bcc4714739c54deeb9bac7/65d7663e0ceca67e8b5709c5_favicon.png" />
+    }
   />
   <Card
     title="AssemblyAI"
     href="https://www.assemblyai.com/docs/api-reference"
+    icon={
+      <img src="https://www.assemblyai.com/favicon.png" />
+    }
   />
   <Card
     title="SuperAgent"
     href="https://docs.superagent.sh/"
+    icon={
+      <img src="https://framerusercontent.com/images/P75NaYul3IVsoMqx4RMALvngO4.png" />
+    }
   />
   <Card
     title="MultiOn"
     href="https://docs.multion.ai/"
+    icon={
+      <img src="https://www.multion.ai/android-chrome-192x192.png" />
+    }
   />
   <Card
     title="Coactive"
     href="https://docs.coactive.ai/"
+    icon={
+      <img src="https://images.prismic.io/coactive/6d31b17f-cabb-492d-93ef-a9f42e03aaa2_coactive-logo-home.png?ixlib=gatsbyFP&auto=compress%2Cformat&fit=max" />
+    }
   />
   <Card
     title="Zep"
     href="https://help.getzep.com/"
+    icon={
+      <img src="https://assets-global.website-files.com/660b1c076d13b7e2967a499d/660c6dc329d8b16a8468f5ba_Asset%2017.png" />
+    }
   />
 </CardGroup>
-<br/>
-
-
