--- a/fern/pages/docs/introduction/showcase.mdx
+++ b/fern/pages/docs/introduction/showcase.mdx
@@ -9,7 +9,7 @@ With Fern, you can build beautiful developer documentation that matches your bra
    <img alt="Sample docs" src="./hume-docs.png" />
 </Frame>
 
-## Showcase 
+## Documentation showcase
 
 <CardGroup cols={3}>
   <Card
@@ -62,3 +62,18 @@ With Fern, you can build beautiful developer documentation that matches your bra
     }
   />
 </CardGroup>
+
+## Feature showcase
+
+### Authenticated API Playground
+[Rightbrain.ai](https://rightbrain.ai/) builds their docs with Fern to allow users to log in and run authenticated queries directly within their API Reference. 
+
+<Frame caption="A user is prompted to log in">
+<iframe src="https://drive.google.com/file/d/1W2JVYMW_P0bPmwrGIFYo4CQVZtjJBGpH/preview" width="3000" height="400" allow="autoplay"></iframe>
+</Frame>
+
+Once logged in, their unique API authentication token is automatically populated for all queries. 
+
+<Frame caption="Auto-populated API authentication token">
+<img src="./logged-in.png" />
+</Frame>
